tests/snapshots/snapshots__python_sample_level6.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
     1→
     2→from typing import Optional, Generic, TypeVar
     3→from dataclasses import dataclass
     4→
     5→T = TypeVar("T")
     6→
     7→# Process the input items and return the total count.
     8→def process_items(items: list[str]) -> int:
     9→    return len(items)
    10→
    11→def _helper() -> None:
    12→    pass
    13→
    14→@dataclass
    15→class Token:
    16→    kind: str
    17→    span: tuple[int, int]
    18→    value: Optional[str] = None
    19→
    20→# A visitor that walks over tokens.
    21→class Visitor:
    22→    def visit_token(self, token: Token) -> None:
    23→        pass
    24→
    25→    def visit_all(self, tokens: list[Token]) -> None:
    26→        for t in tokens:
    27→            self.visit_token(t)
    28→
    29→class TokenParser(Generic[T]):
    30→    """A generic token parser.
    31→
    32→    Parses source text into a list of tokens.
    33→    """
    34→
    35→    MAX_TOKENS: int = 1024
    36→
    37→    def __init__(self, source: str) -> None:
    38→        """Initialize the parser with source text."""
    39→        self._tokens: list[Token] = []
    40→        self._source = source
    41→
    42→    def parse(self) -> list[Token]:
    43→        """Parse and return the token list."""
    44→        return self._tokens
    45→
    46→    @classmethod
    47→    def from_file(cls, path: str) -> "TokenParser[T]":
    48→        with open(path) as f:
    49→            return cls(f.read())
    50→
    51→    def _advance(self) -> None:
    52→        pass
    53→
    54→VERSION: str = "0.1.0"
