tests/snapshots/snapshots__python_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
     5→T
     8→def process_items
    11→def _helper
    15→class Token
    21→class Visitor
    22→    def visit_token
    25→    def visit_all
    29→class TokenParser
    37→    def __init__
    42→    def parse
    47→    def from_file
    51→    def _advance
    54→VERSION
