tests/snapshots/snapshots__rust_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.rs
     3→pub fn process …
     7→fn helper() {}
