tests/snapshots/snapshots__rust_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.rs
     3→pub fn process(input: &str) -> Result<Vec<Token>, Error> {
    10→pub struct Token …
    11→    kind: TokenKind,
    12→    span: Span,
    13→}
    16→pub enum TokenKind …
    17→    Ident,
    18→    Number,
    19→    Symbol,
    20→}
    23→pub trait Visitor …
    24→    fn visit_token …
    25→    fn visit_all …
    32→impl std::fmt::Display for Token …
    38→impl Token …
    40→    pub fn new(kind: TokenKind, span: Span) -> Self {
    45→pub type Span …
    49→pub static VERSION …
