tests/snapshots/snapshots__rust_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.rs
     3→pub fn process(input: &str) -> Result<Vec<Token>, Error> {
    10→pub struct Token …
    23→pub trait Visitor …
