tests/snapshots/snapshots__rust_sample_level5.snap
---
source: tests/snapshots.rs
expression: output
---
sample.rs
     2→/// Process the input and return a list of tokens.
     3→pub fn process(input: &str) -> Result<Vec<Token>, Error> {
     7→fn helper() {}
     9→/// A lexical token with its kind and source span.
    10→pub struct Token {
    11→    kind: TokenKind,
    12→    span: Span,
    13→}
    15→/// The kind of a lexical token.
    16→pub enum TokenKind {
    17→    Ident,
    18→    Number,
    19→    Symbol,
    20→}
    22→/// Trait for visiting tokens in a token stream.
    23→pub trait Visitor {
    24→    fn visit_token(&mut self, token: &Token);
    25→    fn visit_all(&mut self, tokens: &[Token]) {
    26→        for t in tokens {
    27→            self.visit_token(t);
    28→        }
    29→    }
    30→}
    32→impl std::fmt::Display for Token {
    33→    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
    38→impl Token {
    39→    /// Create a new token with the given kind and span.
    40→    pub fn new(kind: TokenKind, span: Span) -> Self {
    45→pub type Span = (usize, usize);
    47→const MAX_TOKENS: usize = 1024;
    49→pub static VERSION: &str = "0.1.0";
    51→macro_rules! token {
    57→pub mod lexer;
